# Voice-Emotion-Recognition

./: Emotion_recognition.ipynb  README.md  audio_utils.py  data_loader.py  feature_extraction.py  feature_extration.py  main.py  models.py  pyproject.toml  train.py  voice.py
