[project]
name = "voice-emotion-recognition"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kagglehub>=1.0.0",
    "librosa>=0.10.0",
    "numpy<2.0.0",
    "pandas>=2.0.0",
    "soundfile>=0.12.0",
    "scikit-learn>=1.3.0",
    "tensorflow>=2.15.0",
    "tqdm>=4.66.0",
    "joblib>=1.3.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
]
